--- a/css/creative.css
+++ b/css/creative.css
@@ -220,7 +220,7 @@ header {
     min-height: auto;
     text-align: center;
     color: #fff;
-    background-image: url(../img/carousel/item4comp.jpg);
+    background-image: url(../img/jumbotron.jpg);
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
